k8s/golang_api_dns_service.yaml
# Indicates this as a service
kind: Service
apiVersion: v1
metadata:
  # Service name
  name: golang-api-dns-deployment-cluster-ip
spec:
  type: ClusterIP
  selector:
    # Selector for Pods
    app: golang-api-dns
  ports:
    # Port Map
    - port: 8080
