k8s/golang_api_dns_service_nodeport.yaml
# Indicates this as a service
kind: Service
apiVersion: v1
metadata:
  # Service name
  name: golang-api-dns-deployment-nodeport
spec:
  type: NodePort
  selector:
    # Selector for Pods
    app: golang-api-dns
  ports:
    # Port Map
  - nodePort: 30000
    port: 8080
    targetPort: 8080
