k8s/golang_api_github_service.yaml
# Indicates this as a service
kind: Service
apiVersion: v1
metadata:
  # Service name
  name: golang-api-github-deployment-cluster-ip
spec:
  type: ClusterIP
  selector:
    # Selector for Pods
    app: golang-api-github
  ports:
    # Port Map
    - port: 8880
