k8s/golang_api_github_service_loadbalancer.yaml
# Indicates this as a service
kind: Service
apiVersion: v1
metadata:
  # Service name
  name: golang-api-github-deployment-loadbalancer
spec:
  type: LoadBalancer
  selector:
    # Selector for Pods
    app: golang-api-github
  ports:
  # Port Map
  - port: 8091
    targetPort: 8880
    protocol: TCP
