k8s/golang_api_github_service_nodeport.yaml
# Indicates this as a service
kind: Service
apiVersion: v1
metadata:
  # Service name
  name: golang-api-github-deployment-nodeport
spec:
  type: NodePort
  selector:
    # Selector for Pods
    app: golang-api-github
  ports:
    # Port Map
  - nodePort: 30001
    port: 8880
    targetPort: 8880
